--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,13 @@ buildscript {
     }
 }
 
+
+
+
+ext {
+    buildToolsVersion = '34.0.0'
+}
+
 allprojects {
     repositories {
         google()
